# git-open-remote

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: GenerateRelease.yml
gitor/: CMakeLists.txt  gitor.cpp  open-browser.cpp  open-browser.h
